--- a/dotfiles/.emacs.d/email.org
+++ b/dotfiles/.emacs.d/email.org
@@ -92,7 +92,7 @@ This section contains the ~mu4e~ emacs specific configuration.
 
   ;; Config mu4e bookmarks
   (setq mu4e-bookmarks
-        '((:name "Filtered unread messages" :query "flag:unread AND (maildir:/Archive OR maildir:/Inbox) AND NOT flag:trashed" :key ?u)
+        '((:name "Filtered unread messages" :query "flag:unread AND (maildir:/Archive OR maildir:/INBOX) AND NOT flag:trashed" :key ?u)
           (:name "All unread messages" :query "flag:unread" :key ?U)
           (:name "Today's messages" :query "date:today..now" :key ?t)
           (:name "Last 7 days" :query "date:7d..now" :hide-unread t :key ?w)
@@ -100,7 +100,7 @@ This section contains the ~mu4e~ emacs specific configuration.
 
   (setq mu4e-maildir-shortcuts
         ;; Proton folders
-        '((:maildir "INBOX" :key ?i)
+        '((:maildir "/INBOX" :key ?i)
           (:maildir "/Archive" :key ?a)
           (:maildir "/Drafts" :key ?d)
           (:maildir "/Sent" :key ?s)
